--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "type": "module",
+  "type": "commonjs",
   "author": "Artem Bolshak",
   "license": "ISC",
   "keywords": [],
@@ -12,7 +12,7 @@
     "type-check": "npx tsc --noEmit",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "npx ts-node src/index.ts",
+    "dev": "tsx src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -34,9 +34,11 @@
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0"
   }
